# trashbot

./: .gitignore  README.md  data.json  json_data.py  logging_conf.json  pyproject.toml  requirements.txt  roster.py  roster_data.json  trashbot.py
.ebextensions/: 00_set_timezone.config  01_flask.config  02_python.config
