[tool.poetry]
name = "repl_nix_trashbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.10.1"
Flask = "^2.3.2"
line-bot-sdk = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
